--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,11 +5,11 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="15dp"
-    android:layout_marginTop="24dp"
-    android:layout_marginRight="15dp"
     tools:context=".ui.fragment.HomeFragment">
     <ScrollView
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginRight="15dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
@@ -227,7 +227,7 @@
                         android:layout_alignParentRight="true"
                         android:layout_marginTop="10dp"/>
                     <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recInvormation"
+                        android:id="@+id/rvInvormation"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
