--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -191,6 +191,7 @@
             tools:ignore="TextSizeCheck" />
 
         <TextView
+            android:id="@+id/tvRegistNow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/btnSignin"
