--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,5 +29,26 @@
         android:id="@+id/homeFragment"
         android:name="com.example.resi_android_new.ui.fragment.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_transactionHistory"
+            app:destination="@id/transactionHistory" />
+    </fragment>
+    <fragment
+        android:id="@+id/transactionHistory"
+        android:name="com.example.resi_android_new.ui.fragment.TransactionHistory"
+        android:label="fragment_transaction_history"
+        tools:layout="@layout/fragment_transaction_history" >
+        <action
+            android:id="@+id/action_transactionHistory_to_homeFragment"
+            app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_transactionHistory_to_fragmentDetailNota"
+            app:destination="@id/fragmentDetailNota" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragmentDetailNota"
+        android:name="com.example.resi_android_new.ui.fragment.FragmentDetailNota"
+        android:label="fragment_detail_nota"
+        tools:layout="@layout/fragment_detail_nota" />
 </navigation>
