--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,8 @@
     <color name="blue_10">#1A0093FE</color>
     <color name="main_dark_blue">#16527A</color>
     <color name="main_red">#CD3C27</color>
+    <color name="main_black_32">#52000000</color>
+    <color name="main_black_62">#000000</color>
+    <color name="transparent">#00FFFFFF</color>
+    <color name="grey_42">#6BCCCCCC</color>
 </resources>
