--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="main_black_62">#000000</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="grey_42">#6BCCCCCC</color>
+    <color name="main_green">#00D566</color>
 </resources>
