--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -56,7 +56,7 @@
             android:id="@+id/ivResi"
             android:layout_width="104dp"
             android:layout_height="104dp"
-            android:src="@drawable/ic_resi"/>
+            android:src="@drawable/ic_resi_circle"/>
 
 
         <RelativeLayout
