--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -73,7 +73,7 @@
                     android:id="@+id/ivResi"
                     android:layout_width="104dp"
                     android:layout_height="104dp"
-                    android:src="@drawable/ic_resi"/>
+                    android:src="@drawable/ic_resi_circle"/>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
