--- a/app/src/main/res/layout/fragment_forget_password.xml
+++ b/app/src/main/res/layout/fragment_forget_password.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/main_blue"
-    tools:context=".FragmentForgetPassword">
+    tools:context=".ui.fragment.FragmentForgetPassword">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
