--- a/app/src/main/res/layout/fragment_splashscreen2.xml
+++ b/app/src/main/res/layout/fragment_splashscreen2.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentSplashscreen2"
+    tools:context=".ui.fragment.FragmentSplashscreen2"
     android:background="@color/main_blue">
 
     <RelativeLayout
@@ -28,6 +28,7 @@
             android:layout_height="wrap_content"
             android:text="Ubah Catatanmu, Lebih Efisien dengan Nota Digital!"/>
         <ImageButton
+            android:id="@+id/ibNext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/btn_mulai"
