--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/fragmentSplashScreen1">
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.resi_android_new.ui.fragment.LoginFragment"
@@ -15,6 +15,9 @@
         <action
             android:id="@+id/action_loginFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_fragmentForgetPassword"
+            app:destination="@id/fragmentForgetPassword" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
@@ -24,6 +27,9 @@
         <action
             android:id="@+id/action_registerFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_registerFragment_to_fragmentForgetPassword"
+            app:destination="@id/fragmentForgetPassword" />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
@@ -33,6 +39,12 @@
         <action
             android:id="@+id/action_homeFragment_to_transactionHistory"
             app:destination="@id/transactionHistory" />
+        <action
+            android:id="@+id/action_homeFragment_to_fragmentFaq"
+            app:destination="@id/fragmentFaq" />
+        <action
+            android:id="@+id/action_homeFragment_to_fragmentProfile"
+            app:destination="@id/fragmentProfile" />
     </fragment>
     <fragment
         android:id="@+id/transactionHistory"
@@ -50,5 +62,66 @@
         android:id="@+id/fragmentDetailNota"
         android:name="com.example.resi_android_new.ui.fragment.FragmentDetailNota"
         android:label="fragment_detail_nota"
-        tools:layout="@layout/fragment_detail_nota" />
+        tools:layout="@layout/fragment_detail_nota" >
+        <action
+            android:id="@+id/action_fragmentDetailNota_to_transactionHistory"
+            app:destination="@id/transactionHistory" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragmentSplashscreen"
+        android:name="com.example.resi_android_new.ui.fragment.FragmentSplashscreen"
+        android:label="fragment_splashscreen"
+        tools:layout="@layout/fragment_splashscreen" >
+        <action
+            android:id="@+id/action_fragmentSplashscreen_to_loginFragment"
+            app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_fragmentSplashscreen_to_fragmentSplashScreen1"
+            app:destination="@id/fragmentSplashScreen1" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragmentSplashScreen1"
+        android:name="com.example.resi_android_new.ui.fragment.FragmentSplashScreen1"
+        android:label="fragment_splash_screen1"
+        tools:layout="@layout/fragment_splashscreen1" >
+        <action
+            android:id="@+id/action_fragmentSplashScreen1_to_fragmentSplashscreen2"
+            app:destination="@id/fragmentSplashscreen2" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragmentSplashscreen2"
+        android:name="com.example.resi_android_new.ui.fragment.FragmentSplashscreen2"
+        android:label="fragment_splashscreen2"
+        tools:layout="@layout/fragment_splashscreen2" >
+        <action
+            android:id="@+id/action_fragmentSplashscreen2_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragmentProfile"
+        android:name="com.example.resi_android_new.ui.fragment.FragmentProfile"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_fragmentProfile_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragmentForgetPassword"
+        android:name="com.example.resi_android_new.ui.fragment.FragmentForgetPassword"
+        android:label="fragment_forget_password"
+        tools:layout="@layout/fragment_forget_password" >
+        <action
+            android:id="@+id/action_fragmentForgetPassword_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragmentFaq"
+        android:name="com.example.resi_android_new.ui.fragment.FragmentFaq"
+        android:label="fragment_faq"
+        tools:layout="@layout/fragment_faq" >
+        <action
+            android:id="@+id/action_fragmentFaq_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 </navigation>
