--- a/app/src/main/res/layout/fragment_detail_nota.xml
+++ b/app/src/main/res/layout/fragment_detail_nota.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="15dp">
 
         <ImageView
+            android:id="@+id/ibBackButton"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -36,6 +37,7 @@
     </RelativeLayout>
 
     <ScrollView
+        android:layout_marginBottom="200px"
         android:layout_below="@id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
