--- a/app/src/main/res/layout/fragment_faq.xml
+++ b/app/src/main/res/layout/fragment_faq.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="15dp">
 
         <ImageView
+            android:id="@+id/ivBack"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
