--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content"
     tools:context=".ui.fragment.HomeFragment">
     <ScrollView
+        android:layout_marginBottom="200px"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="24dp"
         android:layout_marginRight="15dp"
