--- a/app/src/main/res/layout/fragment_scan_qr.xml
+++ b/app/src/main/res/layout/fragment_scan_qr.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".FragmrntScanQr"
+    tools:context=".ui.fragment.FragmentScanQr"
     android:background="@color/grey_100">
 
     <LinearLayout
@@ -22,6 +22,7 @@
             android:layout_marginTop="10dp">
 
             <ImageView
+                android:id="@+id/ivBack"
                 android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -36,6 +37,7 @@
                 android:layout_centerHorizontal="true"/>
 
             <ImageView
+                android:id="@+id/ivLightMode"
                 android:layout_centerVertical="true"
                 android:layout_alignParentEnd="true"
                 android:layout_width="wrap_content"
