--- a/app/src/main/res/layout/fragment_scan_qr_light.xml
+++ b/app/src/main/res/layout/fragment_scan_qr_light.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".FragmentScanQrLight">
+    tools:context=".ui.fragment.FragmentScanQrLight">
 
     <LinearLayout
         android:id="@+id/cardHeader"
@@ -21,6 +21,7 @@
             android:layout_marginTop="10dp">
 
             <ImageView
+                android:id="@+id/ivBack"
                 android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -35,6 +36,7 @@
                 android:layout_centerHorizontal="true"/>
 
             <ImageView
+                android:id="@+id/ivDarkMode"
                 android:layout_centerVertical="true"
                 android:layout_alignParentEnd="true"
                 android:layout_width="wrap_content"
