--- a/app/src/main/res/layout/item_detail_nota.xml
+++ b/app/src/main/res/layout/item_detail_nota.xml
@@ -4,7 +4,7 @@
     <data>
     <variable
         name="detailProduct"
-        type="com.example.resi_android_new.data.response.DetailProduct" />
+        type="com.example.resi_android_new.data.response.ApiProductdetail" />
     </data>
 
     <androidx.cardview.widget.CardView
@@ -27,7 +27,6 @@
                 android:textAlignment="textStart"
                 android:scrollbarSize="12dp"
                 android:layout_height="wrap_content"
-                android:text="@{detailProduct.name, default=`Chitato sapi`}"
                 android:textSize="12sp"
                 android:textStyle="bold" />
 
@@ -35,7 +34,6 @@
                 android:id="@+id/tvQty"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:text="@{detailProduct.quantity, default = 1}"
                 android:fontFamily="@font/poppins_regular"
                 android:textColor="@color/black"
                 android:paddingLeft="1dp"
@@ -46,7 +44,6 @@
                 android:id="@+id/tvPrice"
                 android:layout_width="110dp"
                 android:layout_height="wrap_content"
-                android:text="@{detailProduct.price, default = 11000}"
                 android:fontFamily="@font/poppins_regular"
                 android:textColor="@color/black"
                 android:paddingLeft="1dp"
@@ -57,7 +54,6 @@
                 android:id="@+id/tvTotalPrice"
                 android:layout_width="110dp"
                 android:layout_height="wrap_content"
-                android:text="@{detailProduct.total, default = 11000}"
                 android:fontFamily="@font/poppins_regular"
                 android:textColor="@color/black"
                 android:paddingLeft="1dp"
