--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/fragmentSplashscreen">
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.resi_android_new.ui.fragment.LoginFragment"
@@ -13,11 +13,11 @@
             android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
         <action
-            android:id="@+id/action_loginFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
             android:id="@+id/action_loginFragment_to_fragmentForgetPassword"
             app:destination="@id/fragmentForgetPassword" />
+        <action
+            android:id="@+id/action_loginFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
@@ -101,11 +101,7 @@
         android:id="@+id/fragmentProfile"
         android:name="com.example.resi_android_new.ui.fragment.FragmentProfile"
         android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" >
-        <action
-            android:id="@+id/action_fragmentProfile_to_loginFragment"
-            app:destination="@id/loginFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_profile" />
     <fragment
         android:id="@+id/fragmentForgetPassword"
         android:name="com.example.resi_android_new.ui.fragment.FragmentForgetPassword"
@@ -124,4 +120,34 @@
             android:id="@+id/action_fragmentFaq_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
+    <action
+        android:id="@+id/action_global_fragmentProfile"
+        app:destination="@id/fragmentProfile" />
+    <action
+        android:id="@+id/action_global_homeFragment"
+        app:destination="@id/homeFragment" />
+    <action
+        android:id="@+id/action_global_loginFragment"
+        app:destination="@id/loginFragment" />
+    <fragment
+        android:id="@+id/fragmrntScanQr"
+        android:name="com.example.resi_android_new.ui.fragment.FragmentScanQr"
+        android:label="fragment_scan_qr"
+        tools:layout="@layout/fragment_scan_qr" >
+        <action
+            android:id="@+id/action_fragmrntScanQr_to_fragmentScanQrLight"
+            app:destination="@id/fragmentScanQrLight" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragmentScanQrLight"
+        android:name="com.example.resi_android_new.ui.fragment.FragmentScanQrLight"
+        android:label="fragment_scan_qr_light"
+        tools:layout="@layout/fragment_scan_qr_light" >
+        <action
+            android:id="@+id/action_fragmentScanQrLight_to_fragmrntScanQr"
+            app:destination="@id/fragmrntScanQr" />
+    </fragment>
+    <action
+        android:id="@+id/action_global_fragmrntScanQr"
+        app:destination="@id/fragmrntScanQr" />
 </navigation>
