fix navigation controller

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -336,6 +336,7 @@
                     android:textSize="12dp" />
 
                 <TextView
+                    android:id="@+id/tvLoginSekarang"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/btnSignin"
