--- a/app/src/main/res/layout/fragment_forget_password.xml
+++ b/app/src/main/res/layout/fragment_forget_password.xml
@@ -121,7 +121,7 @@
                 </RelativeLayout>
 
                 <Button
-                    android:id="@+id/btnSignup"
+                    android:id="@+id/ctaResetPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/passwordInputContainer"
@@ -135,6 +135,7 @@
                     android:text="ResetPassword" />
 
                 <TextView
+                    android:id="@+id/btnLogin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/btnSignin"
@@ -142,7 +143,7 @@
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="24dp"
                     android:fontFamily="@font/gothica1_extrabold"
-                    android:text="@string/lupa_password"
+                    android:text="Login Sekarang"
                     android:textColor="@color/main_blue"
                     android:textSize="13dp" />
 
@@ -159,13 +160,14 @@
                     android:textSize="12dp" />
 
                 <TextView
+                    android:id="@+id/btnRegister"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/btnSignin"
                     android:layout_marginStart="24dp"
                     android:layout_marginEnd="24dp"
                     android:fontFamily="@font/gothica1_extrabold"
-                    android:text="@string/login_disini"
+                    android:text="Daftarkan Akunmu"
                     android:textColor="@color/main_blue"
                     android:textSize="13dp"
                     android:paddingBottom="40dp"
