--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -203,7 +203,7 @@
                             android:id="@+id/nomerTelefonInput"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="textPassword" />
+                            android:inputType="text" />
                     </com.google.android.material.textfield.TextInputLayout>
                 </RelativeLayout>
                 <RelativeLayout
